--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.4.0",
+        "laravel-vue-pagination": "^4.1.1",
         "primeicons": "^6.0.1",
         "vue": "^3.2.36"
     }
